@@ -45,6 +45,7 @@ tmire
 tperl
 tput
 tpw
+tpython
 tring
 trpmio
 tsw
